corrects path for icon, aligns icon correctly

--- a/css/components/messages.css
+++ b/css/components/messages.css
@@ -12,7 +12,7 @@
   border: 1px solid;
   border-width: 1px 1px 1px 0;  /* LTR */
   border-radius: 2px;
-  background: no-repeat 10px 17px;  /* LTR */
+  background: no-repeat 10px 21px;  /* LTR */
   overflow-wrap: break-word;
 }
 [dir="rtl"] .messages {
@@ -20,7 +20,7 @@
   padding-left: 20px;
   text-align: right;
   border-width: 1px 0 1px 1px;
-  background-position: right 10px top 17px;
+  background-position: right 10px top 21px;
 }
 .messages + .messages {
   margin-top: 1.538em;
@@ -38,7 +38,7 @@
   color: #325e1c;
   border-color: #c9e1bd #c9e1bd #c9e1bd transparent;  /* LTR */
   background-color: #f3faef;
-  background-image: url(../../../../misc/icons/73b355/check.svg);
+  background-image: url(../../../../../core/misc/icons/73b355/check.svg);
   box-shadow: -8px 0 0 #77b259; /* LTR */
 }
 [dir="rtl"] .messages--status {
